--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* HEADER */
 .header{
     padding: 40px 0;
 }
@@ -34,6 +35,7 @@
     display: block;
 }
 
+/* NAVBAR  */
 .navbar{
     width: 100%;
     height: 60px;
@@ -67,4 +69,44 @@
 .navbar .underline:hover::after{
     width: 100%;
     transition: 0.3s;
+}
+
+/* MOST READ */
+.most-read{
+    padding: 30px 0;    
+}
+
+.title-section{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    border-top: solid 1px #ced1d6;
+    color: #161616;
+    font-size: 17px;
+    line-height: 21px;
+    font-weight: 700;
+    padding: 0;
+    text-transform: uppercase;
+    margin: 10px 0 20px 0;
+}
+
+.title-section .text{
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    background: #fff;
+    padding: 0 10px 0 0;
+}
+
+.title-section .text::before{
+    content: "Lo más leido";
+}
+
+
+.title-section .text::after{
+    content: "";
+    height: 4px;
+    width: 45%;
+    background-color:#ff0216;
+    display: block;
 }
