--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,27 @@
     content: "Síguenos en redes sociales";
 }
 
+/* CATEGORIES TITLE */
+.categories .current-news .title-section .text::before{
+    content: "Actualidad";
+}
+.categories .politics .title-section .text::before{
+    content: "Política";
+}
+.categories .world .title-section .text::before{
+    content: "Mundo";
+}
+.categories .sports .title-section .text::before{
+    content: "Deportes";
+}
+.categories .economy .title-section .text::before{
+    content: "Economía";
+}
+.categories .cultural .title-section .text::before{
+    content: "Cultural";
+}
+
+
 .title-section .text::after{
     content: "";
     height: 4px;
@@ -234,3 +255,29 @@
     background: #1864c4;
 }
 
+
+.categories .text{
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    background: #fff;
+    padding: 0 10px 0 0;
+}
+
+.categories .more-information{
+    text-decoration: none;
+    display: inline-block; 
+    position: absolute;
+    top: -10px;
+    color: #9c9c9c;
+    font-size: 12px;
+    text-transform: none;
+    right: 0;
+    background: #fff;
+    padding: 0 0 0 10px;
+    transition: color 0.5s ease;
+}
+
+.categories .more-information:hover{
+    color: #161616;
+}
