--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@
     font-weight: 700;
     padding: 0;
     text-transform: uppercase;
-    margin: 10px 0 20px 0;
+    margin: 10px 0 10px 0;
 }
 
 .title-section .text{
@@ -130,7 +130,7 @@
 .title-section .text::after{
     content: "";
     height: 4px;
-    width: 48px;
+    width: 50px;
     background-color:#ff0216;
     display: block;
 }
@@ -280,4 +280,59 @@
 
 .categories .more-information:hover{
     color: #161616;
+}
+
+/* CATEGORY NOTE BOX */
+.categories .noti-box{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 24px;
+}
+
+.categories .noti-box figure{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+}
+
+.categories .noti-box figure img{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.categories .noti-box .info{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    padding: 40px 20px 20px 20px;
+    /* background: -moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.78) 100%);
+    background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.78) 100%); */
+    background: linear-gradient(to bottom,rgba(0,0,0,0) 0%,rgba(0,0,0,0.78) 100%);
+}
+
+.categories .noti-box .info .title{
+    color: #fff;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 700;
+}
+
+.categories .noti-box .info .title a{
+    text-decoration: none;
+    background-image: linear-gradient(#fff,#fff);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-size: 0% 1px;
+    transition: background-size 0.3s ease-in-out;
+    color: #fff;
+}
+
+.categories .noti-box .info .title a:hover{
+    background-size: 100% 1px;
+    color: inherit;
 }
