--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,16 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
 /* HEADER */
 .header{
-    padding: 40px 0;
+    padding: 30px 0;
 }
 
 .header .logo{
@@ -335,4 +342,53 @@
 .categories .noti-box .info .title a:hover{
     background-size: 100% 1px;
     color: inherit;
+}
+
+/* PODCAST */
+.podcast{
+    margin-top: 30px;
+    padding: 50px 0;
+    background-color: #20282b;
+}
+
+.logo-podcast{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.podcast .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.podcast .info .logos a{
+    margin: 0 10px;
+}
+
+.text-info-podcast{
+    color: #f2f1ed;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.logo-podcast svg{
+    max-width: 100%;
+    display: block;
+}
+
+.logo-podcast .title-podcast{
+    display: block;
+    color: #ff0216;
+    font-style: italic;
+    font-size: 50px;
+    line-height: 52px;
+    font-weight: 700;
+    margin-top: 20px;
 }
